@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920619
+MANIFEST for ded, version t19920702
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
